assets/css/styles.css
/* ... */
@media (max-width: 1050px) {
  .contact-main {
    width: 90vw;
  }
}

@media (max-width: 900px) {
  nav {
    position: fixed;
    top: 0;
    bottom: 0;
    right: -250px;
    width: 250px;
    height: 100vh;

    transform: translateX(250px);

    background: hsla(213, 23%, 8%, 0.95);
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
  }

  .menu-open {
    transform: translateX(-250px);
    transition: 0.2s;
    /* cubic bezier?? */
  }

  .menu-close {
    transform: translateX(0px);
    transition: 0.2s;
  }

  .hamburger-menu,
  #close-menu {
    display: block;
  }

  nav ul {
    flex-direction: column;
    justify-content: flex-start;
  }

  nav ul li {
    flex-grow: 0;
    align-self: flex-start;
  }

  #home-julia-logo {
    height: 100px;
  }

  .header {
    grid-template-columns: 15vw 3fr;
    grid-template-rows: 1fr 4fr 1fr;
  }

  /* web page flexbox small screen */

  .web-section-flex {
    flex-direction: column;
  }

  .web-section-flex > article {
    max-width: 70ch;
    /* margin: 5vmin; */
  }

  .web-screenshot {
    width: 80vw;
  }

  /* art and photos */
  .overlay:target img {
    transform: scale(1.1);
    transition: 0.6s;
    width: 70vmin;
    height: auto;
  }

  /* contact */

  .contact-main {
    flex-direction: column;
    align-items: center;
  }

  .contact-info-section {
    width: 70vw;
  }

  .blog-link {
    text-align: center;
  }
}

@media (max-width: 770px) {
  .art-photos-section > a > img {
    width: 35vw;
    margin: 2vmin;
  }

  /* about page */

  .about-flex {
    flex-direction: column-reverse;
    align-content: center;
  }

  .about-flex article {
    width: 60vw;
    align-self: center;
  }

  #julia-photo {
    width: 30vw;
  }
  #about-paragraph {
    margin: 7vmin;
  }

  article p {
    min-width: 25ch;
  }

  article ul {
    margin-bottom: 7vmin;
  }
}

@media (max-width: 630px) {
  /* contact */

  .contact-fieldset {
    width: 80vw;
  }

  #message {
    width: 70vw;
  }

  input {
    width: 50vw;
  }
}

@media (max-width: 400px) {
  .header {
    grid-template-columns: 15vw 3fr;
    grid-template-rows: 1fr 4fr 1fr;
    height: 90vh;
  }

  #home-intro {
    align-self: center;
  }

  /* #home-button a {
    padding: 8px 12px;
  } */

  /* contact */

  #contact-submit-button {
    padding: 3vmin 5vmin;
  }

  footer {
    height: 10vh;
  }
}

@media (min-width: 700px) {
  .project-ind-content {
    flex-direction: row;
    width: 80vw;
    margin: 50px;
    justify-content: space-evenly;
  }
}

@media (max-height: 700px) {
  #home-julia-logo {
    width: 50px;
  }
}

@media (max-height: 700px) and (max-width: 300px) {
  #home-title {
    font-size: 2.2rem;
  }
}

